added the attach mechanism for self & javaagent flag attach